2011-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: s/Witout/Without/

2011-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/xfer-dest-holding.c: Check return value of ftruncate.
	* perl/Amanda/Logfile.swg: Remove debugging statement.

2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Remove KAMANDA_SERVICE_NAME, SERVICE_SUFFIX,
	  AMANDA_SERVICE_DEFAULT and KAMANDA_SERVICE_DEFAULT.
	* common-src/bsd-security.c: Use AMANDA_SERVICE_NAME.
	* common-src/bsdtcp-security.c: Use AMANDA_SERVICE_NAME.
	* common-src/bsdudp-security.c: Use AMANDA_SERVICE_NAME.
	* common-src/util.c: Use AMANDA_SERVICE_NAME.
	* config/amanda/debugging.m4: Remove AMANDA_WITH_TESTING
	* configure.in: Remove AMANDA_WITH_TESTING.
	* oldrecover-src/amrecover.c: Remove SERVICE_SUFFIX.
	* oldrecover-src/extract_list.c: Remove SERVICE_SUFFIX.
	* client-src/patch-system.sh: Set SERVICE_SUFFIX to "".

2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Remove file.
	* server-src/chunker.pl: New perl chunker.
	* perl/Amanda/Chunker/Controller.pm,
	  perl/Amanda/Chunker/Protocol.pm,
	  perl/Amanda/Chunker/Scribe.pm: Perl object for chunker.
	* perl/Amanda/Logfile.swg (make_chunker_stats): New function.
	* perl/Amanda/XferServer.swg: Add Amanda::Xfer::Dest::Holding.
	* perl/Amanda/Xfer.pod: Document Amanda::Xfer::Dest::Holding.
	* perl/Amanda/Xfer.swg: Add XMSG_CHUNK_DONE and new xmsg arguments.
	* perl/Makefile.am: Add Amanda::Chunker::*
	* server-src/Makefile.am (amlibexec_PROGRAMS): Remove chunker.
	* server-src/Makefile.am (amlibexec_SCRIPTS_PERL): Add chunker.
	* server-src/driver.c: Fix for new protocol with chunker.
	* server-src/driverio.c: Fix for new protocol with chunker.
	* server-src/driverio.h: Add sendresult in chunker_t.
	* server-src/xfer-dest-holding.c: New xfer destination for holding disk
	* server-src/xfer-server.h: Add function for xfer_dest_holding.