@@ -1,3 +1,6 @@
+2011-06-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Check holding file is in a holding directory.
+
 2011-06-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* man/xml-source/amanda-devices.7.xml: s/Witout/Without/
 
